# flowlayer

./: .gitignore  LATEST.md  Makefile  README.md  VERSION  __init__.py  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  improvement-request.md  proposal.md
.github/workflows/: check-commit.yml  tag-release.yml
flowlayer/: __init__.py
flowlayer/core/: __init__.py  api.py  engine.py  network.py  nodes.py  package.py  plot.py  sampler.py  stores.py
ilflow/core/: api.py  engine.py  network.py  package.py
ilflow/features/: __init__.py  dummy.py
tests/: fixtures.py
tests/core/: test_api.py  test_datagears.py  test_engine.py  test_network.py  test_nodes.py  test_package.py  test_plot.py  test_sampler.py  test_stores.py
tests/core/fixtures/: engine.py  features.py  network.py  package.py  stores.py
tests/core/pytest_fixtures/: __init__.py  network.py
tests/fixtures/core/: fixture_network.py
