[tool.poetry]
name = "flowlayer"
version = "0.1.0"
description = "Easily build your data processing workflows."
authors = ["sam <contact@justsam.io>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
matplotlib = "^3.3.4"
pydot = "^1.4.2"
numpy = "^1.20.2"
# dask = "^2021.4.0"
# distributed = "^2021.4.0"
filelock = "^3.0.12"
semver = "^2.13.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
bandit = "^1.7.0"
pycodestyle = "^2.7.0"
flake8 = "^3.9.0"
pytest-isort = "^1.3.0"
pytest-flake8 = "^1.0.7"
pytest-mypy = "^0.8.1"
pytest-xdist = "^2.2.1"
psutil = "^5.8.0"
pytest-cov = "^2.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 160
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | docs/conf.py
)
'''

# [tool:pytest]
# log_cli = true
# log_cli_level = DEBUG
# log_format = %(asctime)s %(levelname)s %(name)s: %(message)s
# log_date_format = %Y-%m-%d %H:%M:%S